@@ -284,7 +284,7 @@ BreakPointInfo *SourceBrowserAsm_Window::getBPatLine(int id, unsigned int line)
   if(!sa_xlate_list[id])
     return 0;
 
-  if(line<0)
+  if(line>0xffff0000)
     return 0;
 
   p=sa_xlate_list[id];
@@ -292,6 +292,7 @@ BreakPointInfo *SourceBrowserAsm_Window::getBPatLine(int id, unsigned int line)
   /*
     locate listentry with index larger than argument
   */
+
   while(p->next!=0)
     {
       e = (BreakPointInfo*)p->data;
@@ -432,6 +433,8 @@ void SourceBrowserAsm_Window::SetPC(int address)
   if(sbawFileId == 0xffffffff)
     return;
 
+  printf("%s:%d file id =%d address=%d\n",__FUNCTION__,__LINE__,sbawFileId,address);
+
   for(i=0;i<SBAW_NRFILES;i++) {
     if(pages[i].pageindex_to_fileid == sbawFileId)
       id=i;
@@ -454,6 +457,7 @@ void SourceBrowserAsm_Window::SetPC(int address)
   new_pcw = pages[id].source_pcwidget;
 
   row = pma->get_src_line(address);
+  printf("%s:%d file row =%d\n",__FUNCTION__,__LINE__,row);
 
   if(row==(int)INVALID_VALUE)
     return;
