@@ -4,8 +4,8 @@
 
 LIBPATH .
 
-CODEPAGE   NAME=vectors    START=0x0            END=0x29           PROTECTED
-CODEPAGE   NAME=page       START=0x2A           END=0x7FFF
+
+CODEPAGE   NAME=page       START=0x00           END=0x7FFF
 CODEPAGE   NAME=idlocs     START=0x200000       END=0x200007       PROTECTED
 CODEPAGE   NAME=config     START=0x300000       END=0x30000D       PROTECTED
 CODEPAGE   NAME=devid      START=0x3FFFFE       END=0x3FFFFF       PROTECTED
